<resources>
    <string name="app_name">Forza Horizon 3 Tuning Calculator</string>
    <string name="unit_spinner_label">Units</string>
    <string name="weight_field_label">Weight</string>
    <string name="imperial_weight_unit">lb</string>
    <string name="metric_weight_unit">kg</string>
    <string name="distrib_field_label">Weight Distribution</string>
    <string name="distrib_unit">%</string>
    <string name="class_spinner_label">Class</string>
    <string name="drivetrain_label">Drivetrain</string>
    <string name="submit_label">Tune</string>
    <string name="tire_psi_label">PSI</string>
    <string name="tire_psi_value">28.0</string>
    <string name="camber_label">Camber</string>
    <string name="toe_label">Toe</string>
    <string name="caster_label">Caster</string>
    <string name="rollbars_label">Rollbars</string>
    <string name="springs_label">Springs</string>
    <string name="rebound_label">Rebound</string>
    <string name="bump_label">Bump</string>
    <string name="brakes_label">Brakes</string>
    <string name="balance_label">Balance</string>
    <string name="balance_value">52-58</string>
    <string name="pressure_label">Pressure</string>
    <string name="pressure_value">200%</string>
    <string name="diff_label">Differential</string>
    <string name="accel_label">Acceleration</string>
    <string name="decel_label">Deceleration</string>
    <string name="diff_awd_accel_front_value">29</string>
    <string name="diff_awd_accel_rear_value">0</string>
    <string name="diff_awd_decel_front_value">59</string>
    <string name="diff_awd_decel_rear_value">18</string>
    <string name="diff_rwd_accel_value">35-60</string>
    <string name="diff_rwd_decel_value">8-16</string>
    <string name="diff_fwd_accel_value">25-45</string>
    <string name="diff_fwd_decel_value">8-16</string>
    <string name="split_label">Split</string>
    <string name="split_value">69</string>
    <string name="front_label">Front</string>
    <string name="rear_label">Rear</string>
</resources>
