<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tune"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wplee.forzahorizon3tuningcalculator.TuneForm"
    android:layout_gravity="center"
    android:background="@color/colorBackground">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridLayout"
        android:layout_gravity="top|center_horizontal">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/unitSpinner"
            android:entries="@array/unit_array"
            android:textAlignment="center"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_columnSpan="2" />

        <TextView
            android:text="@string/weight_field_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weightTextView"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_columnSpan="2" />

        <TextView
            android:text="@string/imperial_weight_unit"
            android:layout_height="wrap_content"
            android:id="@+id/weightUnitTextView"
            android:textSize="30sp"
            android:width="50dp"
            android:textAlignment="center"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_margin="10dp" />

        <SeekBar
            android:id="@+id/distribSeekBar"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:max="100"
            android:layout_margin="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/weightEditText"
            android:textAlignment="textEnd"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/colorText" />

        <TextView
            android:text="@string/class_spinner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/classTextView"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_columnSpan="2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/distribEditText"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
            android:textColor="@color/colorText"
            android:textAlignment="textEnd" />

        <TextView
            android:text="@string/distrib_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/distribUnitTextView"
            android:textSize="30sp"
            android:width="50dp"
            android:textAlignment="center"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

        <TextView
            android:text="@string/distrib_field_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/distribTextView"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_columnSpan="2" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/classSpinner"
            android:textAlignment="center"
            android:entries="@array/class_array"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_columnSpan="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drivetrainTextView"
            android:layout_margin="10dp"
            android:text="@string/drivetrain_label"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:layout_column="0"
            android:layout_row="8" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drivetrainSpinner"
            android:layout_margin="10dp"
            android:entries="@array/drivetrain_array"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:layout_column="0"
            android:layout_row="9"
            android:textAlignment="center" />

        <Button
            android:text="@string/submit_label"
            android:layout_width="wrap_content"
            android:id="@+id/tuneButton"
            android:layout_row="10"
            android:layout_column="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center" />

    </GridLayout>

</ScrollView>
